Mega-Sena, criação de a-link

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     background: #457B9D
 }
+header {
+    display: flex;
+    justify-content: space-around;
+    color: #E63946;
+    text-decoration: none;
+}
 
 main {
     display: flex;
